# chordtrainer

./: .gitignore  Makefile  README.md  chordtrainer  chordtrainer_demo.mov  main.py  pyproject.toml  requirements.txt  run.sh  test_midi.py
chordtrainer/: Chord.ky  __init__.py  __main__.py  chord.kv  chords.py  chordtrainer.py  main.py
chordtrainer0/: chord.kv
chordtrainer1/: chord.kv  chordtrainer.py  main.py  test.kv  test.py
chordtrainer2/: chord.kv  chordtrainer.py  test.kv  test.py
tests/: close_mido.py  sdl_midi.py  test_chordtrainer.py  test_mido.py  test_pygame.py
